fix:add overflow:hidden for modal

--- a/quadcopter/src/components/Modal/Modal.css
+++ b/quadcopter/src/components/Modal/Modal.css
@@ -25,6 +25,8 @@
     justify-content: end;
     height: 65px;
     background: bisque;
+    border-end-end-radius: 11px;
+    border-end-start-radius: 11px;
 }
 
 .modalTitle{
@@ -77,4 +79,14 @@ h3{
     position: absolute;
     border: grey solid 1px;
 }
+
+.scroll-lock-ios{
+    overflow: hidden;
+    position: fixed;
+}
+
+.scroll-lock{
+    overflow: hidden;
+}
+
 
